fix black error on mobile

--- a/components/navabar/navbar.module.css
+++ b/components/navabar/navbar.module.css
@@ -1,3 +1,3 @@
-.menu .MuiPaper-Root{
-    background: black;
+.menu .MuiPaper-Root {
+    background: var(--black);
 }
