--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 body {
-    padding: 0;
+    padding: 0 !important;
     margin: 0;
     height: auto;
     min-width: fit-content;
